# 0unveiled-host

./: .env  .eslintrc.js  .gitignore  .lintstagedrc  OPTIMIZATION_GUIDE.md  README.md  ai_plan.md  commitlint.config.js  components.json  docker-compose.yml  package.json  requirements-minimal.txt  start-backend.sh  start-frontend.sh  turbo.json
.gemini/: GEMINI.md
.github/workflows/: release.yml
.husky/: pre-commit
apps/ai-recruitment-service/: .env  Dockerfile  README.md  package.json  requirements.txt
apps/ai-recruitment-service/src/: __init__.py  config.py  database.py  main.py
apps/ai-recruitment-service/src/models/: recruitment.py  verification.py
apps/ai-recruitment-service/src/routes/: recruitment.py  verification.py
apps/ai-recruitment-service/src/services/: ai_matcher.py  verification_service.py
apps/ai-service/: README.md  pyproject.toml
apps/ai-service/src/ai_service/: __about__.py  __init__.py  config.py  main.py
apps/ai-service/src/ai_service/services/: openai_service.py  text_service.py
apps/api/: .env  .eslintrc.cjs  package.json  tsconfig.json  tsup.config.ts
apps/api/src/: index.ts
apps/api/src/lib/: logger.ts
apps/api/src/middleware/: error-handler.ts
apps/api/src/routes/: auth.ts  cron-leaderboard-update.js  github.ts  health.ts  leaderboard.ts
apps/api/src/scripts/: analyze-and-update-leaderboard.ts  run-leaderboard-update.ts
apps/api/src/services/: leaderboard-service.ts  supabase-github.ts
apps/github-analyzer-service/: .env  .vercelignore  package.json  setup.bat  setup.js  setup.sh
apps/github-analyzer-service/api/: index.py
apps/github-analyzer-service/src/: config.py  main.py
apps/github-analyzer-service/src/analyzers/: __init__.py  ai_insights_analyzer.py  code_analyzer.py  security_analyzer.py  tech_stack_analyzer.py
apps/github-analyzer-service/src/models/: __init__.py  analysis.py  metrics.py  (+1 more)
apps/web/: .env  .eslintrc.cjs  README.md  components.json  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: middleware.ts
docker/: ai-service.Dockerfile  analyzer-service.Dockerfile  api.Dockerfile  web.Dockerfile
scripts/: dev-all.mjs
(+360 files in other folders)
